# discord-email-bridge

./: .gitignore  Cargo.toml  README.md  discord-mail-bridge.example.toml  shell.nix
contrib/: discord-mail-bridge.service  discord-mail-bridge.timer
scripts/: deploy.sh
src/: config.rs  every.rs  main.rs
