[package]
name = "discord-mail-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
discordrs = "2.0.2"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.32"
lettre = { version = "0.11.22", features = ["tokio1", "smtp-transport", "tokio1-native-tls"] }
log = "0.4.30"
reqwest = "0.13.4"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tokio-stream = "0.1.18"
